[metadata]
name = plover-extended-stenotype-custom
version = 0.0.0b0
keywords = plover plover_plugin

description = Custom modifications to the Plover extended stenotype system
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev12
py_modules =
	extended_stenotype_custom

[options.entry_points]
plover.system =
    English Stenotype Extended (Custom) = extended_stenotype_custom