[metadata]
name = plover-amphitheory
version = 0.0.0
keywords = plover plover_plugin

description = System for Amphitheory
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0rc2
packages =
    plover_amphitheory

[options.entry_points]
plover.system =
    English Stenotype (Amphitheory) = plover_amphitheory.system